--- a/firebase.json
+++ b/firebase.json
@@ -9,15 +9,11 @@
     ],
     "headers": [
       {
-        "source": "**",
+        "source": "**/*",
         "headers": [
           {
             "key": "Cross-Origin-Embedder-Policy",
-            "value": "require-corp"
-          },
-          {
-            "key": "Cross-Origin-Opener-Policy",
-            "value": "same-origin-allow-popups"
+            "value": "same-origin"
           }
         ]
       }
