--- a/firebase.json
+++ b/firebase.json
@@ -16,11 +16,20 @@
             "value": "same-origin"
           }
         ]
+      },
+      {
+        "source": "/.well-known/**",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
+          }
+        ]
       }
     ],
     "rewrites": [
       {
-        "source": "**",
+        "source": "!/.well-known/**",
         "destination": "/index.html"
       }
     ]
