--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp -R public/.well-known/* build/.well-known/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
