--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^10.11.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
