--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-native-firebase/storage": "^20.1.0",
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,6 +14,7 @@
     "react-burger-menu": "^3.0.9",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-overlay": "^0.1.7",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
